--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/react-dom": "^16.9.4",
     "@types/react-redux": "^7.1.5",
     "@types/styled-components": "^4.4.2",
+    "@types/webpack-env": "^1.15.0",
     "babel-plugin-styled-components": "^1.10.6",
     "typescript": "^3.6.4"
   }
