--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-map-gl": "^5.0.3",
     "@zeit/next-sass": "^1.0.1",
     "apollo-server-micro": "^2.9.7",
+    "d3": "^5.15.0",
     "dotenv": "^8.2.0",
     "graphql": "^14.5.8",
     "isomorphic-unfetch": "^3.0.0",
@@ -28,6 +29,7 @@
     "react-dom": "^16.12.0",
     "react-map-gl": "^5.0.12",
     "react-redux": "^7.1.3",
+    "recharts": "^2.0.0-beta.1",
     "redux": "^4.0.5",
     "redux-undo": "^1.0.0",
     "styled-components": "^4.4.1"
