--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,5 +15,5 @@
     "jsx": "preserve"
   },
   "exclude": ["node_modules"],
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "utils/d3/utils.js"]
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "utils/d3/utils.ts"]
 }
