--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/react-dom": "^16.9.4",
     "@types/react-map-gl": "^5.1.1",
     "@types/react-redux": "^7.1.5",
+    "@types/resize-observer-browser": "^0.1.3",
     "@types/styled-components": "^4.4.2",
     "@types/webpack-env": "^1.15.0",
     "babel-plugin-styled-components": "^1.10.6",
