created db models, signin and signup routes, and connect middleware

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@auth0/nextjs-auth0": "^0.10.0",
     "@fortawesome/fontawesome-common-types": "^0.2.26",
     "@fortawesome/fontawesome-svg-core": "^1.2.26",
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
@@ -16,14 +17,20 @@
     "@turf/turf": "^5.1.6",
     "@zeit/next-sass": "^1.0.1",
     "apollo-server-micro": "^2.9.7",
+    "bcrypt": "^3.0.8",
     "d3": "^5.15.0",
     "dotenv": "^8.2.0",
     "graphql": "^14.5.8",
     "isomorphic-unfetch": "^3.0.0",
+    "jsonwebtoken": "^8.5.1",
+    "jwt-simple": "^0.5.6",
     "mapbox-gl": "^1.5.0",
     "mongoose": "^5.7.7",
     "next": "^9.2.0",
     "node-sass": "^4.13.0",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-map-gl": "^5.0.12",
