--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bcrypt": "^3.0.8",
     "d3": "^5.15.0",
     "dotenv": "^8.2.0",
+    "formik": "^2.1.4",
     "graphql": "^14.5.8",
     "isomorphic-unfetch": "^3.0.0",
     "jsonwebtoken": "^8.5.1",
@@ -37,7 +38,8 @@
     "react-redux": "^7.1.3",
     "redux": "^4.0.5",
     "redux-undo": "^1.0.0",
-    "styled-components": "^4.4.1"
+    "styled-components": "^4.4.1",
+    "yup": "^0.28.1"
   },
   "devDependencies": {
     "@types/d3": "^5.7.2",
