--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/react-fontawesome": "^0.1.8",
     "@reduxjs/toolkit": "^1.2.1",
     "@turf/turf": "^5.1.6",
+    "@types/js-cookie": "^2.2.4",
     "@zeit/next-sass": "^1.0.1",
     "apollo-server-micro": "^2.9.7",
     "bcrypt": "^3.0.8",
@@ -23,11 +24,13 @@
     "formik": "^2.1.4",
     "graphql": "^14.5.8",
     "isomorphic-unfetch": "^3.0.0",
+    "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
     "jwt-simple": "^0.5.6",
     "mapbox-gl": "^1.5.0",
     "mongoose": "^5.7.7",
     "next": "^9.2.0",
+    "next-cookies": "^2.0.3",
     "node-sass": "^4.13.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
