--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "pg": "^7.18.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-map-gl": "^5.0.12",
@@ -48,6 +49,7 @@
     "@types/d3": "^5.7.2",
     "@types/jest": "^24.0.23",
     "@types/node": "^12.12.14",
+    "@types/pg": "^7.14.1",
     "@types/react": "^16.9.13",
     "@types/react-dom": "^16.9.4",
     "@types/react-map-gl": "^5.1.1",
