converted all endpoints to postgres and created routes endpoint

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,8 +12,16 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve"
+    "jsx": "preserve",
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true
   },
   "exclude": ["node_modules"],
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "utils/d3/utils.ts", "utils/withReduxStore.js"]
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "utils/d3/utils.ts",
+    "utils/withReduxStore.js"
+  ]
 }
