--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/js-cookie": "^2.2.4",
     "@zeit/next-sass": "^1.0.1",
     "apollo-server-micro": "^2.9.7",
+    "aws-sdk": "^2.628.0",
     "bcrypt": "^3.0.8",
     "d3": "^5.15.0",
     "dotenv": "^8.2.0",
@@ -36,6 +37,7 @@
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "pg": "^7.18.2",
+    "puppeteer": "^2.1.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-map-gl": "^5.0.12",
