--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     "@fortawesome/react-fontawesome": "^0.1.8",
     "@reduxjs/toolkit": "^1.2.1",
     "@turf/turf": "^5.1.6",
-    "@types/js-cookie": "^2.2.4",
     "@zeit/next-sass": "^1.0.1",
     "apollo-server-micro": "^2.9.7",
     "aws-sdk": "^2.628.0",
     "bcrypt": "^3.0.8",
     "d3": "^5.15.0",
+    "date-fns": "^2.10.0",
     "dotenv": "^8.2.0",
     "formik": "^2.1.4",
     "graphql": "^14.5.8",
@@ -42,6 +42,7 @@
     "react-dom": "^16.12.0",
     "react-map-gl": "^5.0.12",
     "react-redux": "^7.1.3",
+    "react-select": "^3.0.8",
     "redux": "^4.0.5",
     "redux-undo": "^1.0.0",
     "styled-components": "^4.4.1",
@@ -49,13 +50,16 @@
   },
   "devDependencies": {
     "@types/d3": "^5.7.2",
+    "@types/date-fns": "^2.6.0",
     "@types/jest": "^24.0.23",
+    "@types/js-cookie": "^2.2.5",
     "@types/node": "^12.12.14",
     "@types/pg": "^7.14.1",
     "@types/react": "^16.9.13",
     "@types/react-dom": "^16.9.4",
     "@types/react-map-gl": "^5.1.1",
     "@types/react-redux": "^7.1.5",
+    "@types/react-select": "^3.0.10",
     "@types/resize-observer-browser": "^0.1.3",
     "@types/styled-components": "^4.4.2",
     "@types/webpack-env": "^1.15.0",
