--- a/now.json
+++ b/now.json
@@ -7,7 +7,11 @@
       "MONGO_URI": "@mongo-uri",
       "PG_CONN_STRING": "@pg-conn-string",
       "S3_ACCESS_KEY_ID": "@s3-access-key-id",
-      "S3_SECRET_ACCESS_KEY": "@s3-secret-access-key"
+      "S3_SECRET_ACCESS_KEY": "@s3-secret-access-key",
+      "PUSHER_APP_ID": "@pusher-app-id",
+      "PUSHER_KEY": "@pusher-key",
+      "PUSHER_SECRET": "@pusher-secret",
+      "PUSHER_CLUSTER": "@pusher-cluster"
     }
   }
 }
