--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "passport-local": "^1.0.0",
     "pg": "^7.18.2",
     "puppeteer": "^2.1.1",
+    "pusher": "^3.0.0",
+    "pusher-js": "^5.1.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-map-gl": "^5.0.12",
@@ -55,6 +57,7 @@
     "@types/js-cookie": "^2.2.5",
     "@types/node": "^12.12.14",
     "@types/pg": "^7.14.1",
+    "@types/pusher-js": "^4.2.2",
     "@types/react": "^16.9.13",
     "@types/react-dom": "^16.9.4",
     "@types/react-map-gl": "^5.1.1",
