--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@fortawesome/react-fontawesome": "^0.1.8",
     "@reduxjs/toolkit": "^1.2.1",
     "@turf/turf": "^5.1.6",
+    "@typescript-eslint/eslint-plugin": "^2.22.0",
+    "@typescript-eslint/parser": "^2.22.0",
     "@zeit/next-sass": "^1.0.1",
     "apollo-server-micro": "^2.9.7",
     "aws-sdk": "^2.628.0",
@@ -22,6 +24,8 @@
     "d3": "^5.15.0",
     "date-fns": "^2.10.0",
     "dotenv": "^8.2.0",
+    "eslint": "^6.8.0",
+    "eslint-plugin-react": "^7.18.3",
     "formik": "^2.1.4",
     "graphql": "^14.5.8",
     "isomorphic-unfetch": "^3.0.0",
