--- a/package.json
+++ b/package.json
@@ -31,10 +31,12 @@
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
     "jwt-simple": "^0.5.6",
+    "lodash": "^4.17.15",
     "mapbox-gl": "^1.5.0",
     "next": "^9.2.0",
     "next-cookies": "^2.0.3",
     "node-sass": "^4.13.0",
+    "nprogress": "^0.2.0",
     "pg": "^7.18.2",
     "puppeteer": "^2.1.1",
     "pusher": "^3.0.0",
