--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "apollo-server-micro": "^2.9.7",
     "aws-sdk": "^2.628.0",
     "bcrypt": "^3.0.8",
+    "chrome-aws-lambda": "^2.1.1",
     "d3": "^5.15.0",
     "date-fns": "^2.10.0",
     "dotenv": "^8.2.0",
@@ -38,7 +39,7 @@
     "node-sass": "^4.13.0",
     "nprogress": "^0.2.0",
     "pg": "^7.18.2",
-    "puppeteer": "^2.1.1",
+    "puppeteer-core": "^2.1.1",
     "pusher": "^3.0.0",
     "pusher-js": "^5.1.1",
     "react": "^16.13.0",
@@ -68,6 +69,7 @@
     "@types/styled-components": "^4.4.2",
     "@types/webpack-env": "^1.15.0",
     "babel-plugin-styled-components": "^1.10.6",
+    "puppeteer": "^2.1.1",
     "typescript": "^3.6.4"
   }
 }
