--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint": "^6.8.0",
     "eslint-plugin-react": "^7.18.3",
     "formik": "^2.1.4",
+    "framer-motion": "^1.10.3",
     "graphql": "^14.5.8",
     "isomorphic-unfetch": "^3.0.0",
     "js-cookie": "^2.2.1",
