--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "jsonwebtoken": "^8.5.1",
     "jwt-simple": "^0.5.6",
     "lodash": "^4.17.15",
+    "logrocket": "^1.0.7",
     "mapbox-gl": "^1.5.0",
     "next": "^9.3.0",
     "next-cookies": "^2.0.3",
