--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "redux": "^4.0.5",
     "redux-undo": "^1.0.0",
     "styled-components": "^5.0.1",
+    "swr": "^0.2.0",
     "yup": "^0.28.1"
   },
   "devDependencies": {
