--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.26",
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
     "@fortawesome/react-fontawesome": "^0.1.8",
+    "@material-ui/core": "^4.9.9",
     "@reduxjs/toolkit": "^1.2.1",
     "@turf/turf": "^5.1.6",
     "@zeit/next-sass": "^1.0.1",
     "apollo-server-micro": "^2.9.7",
     "aws-sdk": "^2.628.0",
+    "babel-plugin-import": "^1.13.0",
     "bcrypt": "^3.0.8",
     "chrome-aws-lambda": "^2.1.1",
     "d3": "^5.15.0",
