--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
     "@fortawesome/react-fontawesome": "^0.1.8",
     "@material-ui/core": "^4.9.9",
+    "@math.gl/web-mercator": "^3.1.3",
     "@reduxjs/toolkit": "^1.2.1",
     "@turf/turf": "^5.1.6",
     "@zeit/next-sass": "^1.0.1",
