--- a/.babelrc
+++ b/.babelrc
@@ -2,6 +2,7 @@
   "env": {
     "development": {
       "plugins": [
+        ["inline-react-svg"],
         [
           "styled-components",
           { "ssr": true, "displayName": true, "preprocess": false }
@@ -11,6 +12,7 @@
     },
     "production": {
       "plugins": [
+        ["inline-react-svg"],
         [
           "styled-components",
           { "ssr": true, "displayName": true, "preprocess": false }
@@ -20,6 +22,7 @@
     }
   },
   "plugins": [
+    ["inline-react-svg"],
     [
       "styled-components",
       { "ssr": true, "displayName": true, "preprocess": false }
