--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-redux": "^7.1.3",
     "react-select": "^3.0.8",
     "redux": "^4.0.5",
+    "redux-saga": "^1.1.3",
     "redux-undo": "^1.0.0",
     "styled-components": "^5.0.1",
     "swr": "^0.2.0",
