--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "pusher": "^3.0.0",
     "pusher-js": "^5.1.1",
     "react": "^16.13.0",
+    "react-datepicker": "^2.14.1",
     "react-dom": "^16.13.0",
     "react-map-gl": "^5.0.12",
     "react-redux": "^7.1.3",
