--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.26",
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
     "@fortawesome/react-fontawesome": "^0.1.8",
+    "@mapbox/mapbox-sdk": "^0.10.0",
     "@material-ui/core": "^4.9.9",
     "@math.gl/web-mercator": "^3.1.3",
     "@reduxjs/toolkit": "^1.2.1",
@@ -65,6 +66,7 @@
     "@types/date-fns": "^2.6.0",
     "@types/jest": "^24.0.23",
     "@types/js-cookie": "^2.2.5",
+    "@types/mapbox__mapbox-sdk": "^0.6.2",
     "@types/node": "^12.12.14",
     "@types/pg": "^7.14.1",
     "@types/pusher-js": "^4.2.2",
