--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "test": "jest --watch"
   },
   "dependencies": {
     "@fortawesome/fontawesome-common-types": "^0.2.26",
@@ -62,6 +63,9 @@
     "yup": "^0.28.1"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.9.6",
+    "@testing-library/jest-dom": "^5.5.0",
+    "@testing-library/react": "^10.0.4",
     "@types/d3": "^5.7.2",
     "@types/date-fns": "^2.6.0",
     "@types/jest": "^24.0.23",
@@ -80,10 +84,14 @@
     "@types/webpack-env": "^1.15.0",
     "@typescript-eslint/eslint-plugin": "^2.27.0",
     "@typescript-eslint/parser": "^2.27.0",
+    "babel-jest": "^25.5.1",
     "babel-plugin-inline-react-svg": "^1.1.1",
     "babel-plugin-styled-components": "^1.10.6",
+    "jest": "^25.5.2",
     "puppeteer": "^2.1.1",
+    "react-test-renderer": "^16.13.1",
     "resize-observer-polyfill": "^1.5.1",
+    "ts-jest": "^25.4.0",
     "typescript": "^3.8.3"
   }
 }
