--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bcrypt": "^3.0.8",
     "chrome-aws-lambda": "^2.1.1",
     "d3": "^5.15.0",
+    "d3-simple-slider": "^1.6.5",
     "date-fns": "^2.10.0",
     "dotenv": "^8.2.0",
     "eslint": "^6.8.0",
