--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "formik": "^2.1.4",
     "framer-motion": "^1.10.3",
     "graphql": "^14.5.8",
+    "intersection-observer": "^0.10.0",
     "isomorphic-unfetch": "^3.0.0",
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
