--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
     "redux-undo": "^1.0.0",
+    "simplify-geojson": "^1.0.3",
     "styled-components": "^5.0.1",
     "swr": "^0.2.0",
     "viewport-mercator-project": "^7.0.1",
