--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,5 +17,11 @@
     "experimentalDecorators": true
   },
   "exclude": ["node_modules"],
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"]
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "utils/d3/utils.ts",
+    "utils/withReduxStore.js"
+  ]
 }
