--- a/.babelrc
+++ b/.babelrc
@@ -1,28 +1,13 @@
 {
   "env": {
     "development": {
-      "plugins": [
-        [
-          "styled-components",
-          { "ssr": true, "displayName": true, "preprocess": false }
-        ]
-      ],
-      "presets": ["next/babel"]
+      "presets": ["next/babel"],
+      "plugins": [["styled-components", { "ssr": true, "preprocess": false }]]
     },
     "production": {
-      "plugins": [
-        [
-          "styled-components",
-          { "ssr": true, "displayName": true, "preprocess": false }
-        ]
-      ],
-      "presets": ["next/babel"]
+      "presets": ["next/babel"],
+      "plugins": [["styled-components", { "ssr": true, "preprocess": false }]]
     }
   },
-  "plugins": [
-    [
-      "styled-components",
-      { "ssr": true, "displayName": true, "preprocess": false }
-    ]
-  ]
+  "plugins": [["styled-components", { "ssr": true, "preprocess": false }]]
 }
