--- a/package.json
+++ b/package.json
@@ -37,12 +37,13 @@
     "intersection-observer": "^0.10.0",
     "isomorphic-unfetch": "^3.0.0",
     "js-cookie": "^2.2.1",
+    "js-levenshtein": "^1.1.6",
     "jsonwebtoken": "^8.5.1",
     "jwt-simple": "^0.5.6",
     "lodash": "^4.17.15",
     "logrocket": "^1.0.7",
     "mapbox-gl": "^1.5.0",
-    "next": "^9.3.5",
+    "next": "^9.4.0",
     "next-cookies": "^2.0.3",
     "node-sass": "^4.13.0",
     "nprogress": "^0.2.0",
@@ -91,6 +92,7 @@
     "babel-plugin-inline-react-svg": "^1.1.1",
     "babel-plugin-styled-components": "^1.10.6",
     "jest": "^25.5.2",
+    "jest-styled-components": "^7.0.2",
     "puppeteer": "^2.1.1",
     "react-test-renderer": "^16.13.1",
     "resize-observer-polyfill": "^1.5.1",
