added tests for control buttons, route card and utils functions

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    "utils/d3/utils.ts",
+    "utils",
     "utils/withReduxStore.js"
   ]
 }
