added testing for map component and added types

--- a/tsconfig.jest.json
+++ b/tsconfig.jest.json
@@ -4,7 +4,7 @@
     "allowJs": true,
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
-    "noImplicitAny": true,
+    // "noImplicitAny": true,
     "sourceMap": true,
     "target": "es5"
   }
