--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "test": "jest --watch --verbose"
+    "test": "jest --watch --verbose --runInBand --detectOpenHandles"
   },
   "dependencies": {
     "@fortawesome/fontawesome-common-types": "^0.2.26",
