--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "@babel/preset-env": "^7.9.6",
     "@testing-library/jest-dom": "^5.5.0",
     "@testing-library/react": "^10.0.4",
+    "@testing-library/user-event": "^11.4.1",
     "@types/d3": "^5.7.2",
     "@types/date-fns": "^2.6.0",
     "@types/jest": "^24.0.23",
