--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint-plugin-react": "^7.18.3",
     "firebase": "^7.14.1",
     "firebase-admin": "^8.10.0",
+    "focus-visible": "^5.1.0",
     "formik": "^2.1.4",
     "framer-motion": "^1.10.3",
     "graphql": "^14.5.8",
