--- a/package.json
+++ b/package.json
@@ -49,14 +49,14 @@
     "next-cookies": "^2.0.3",
     "node-sass": "^4.13.0",
     "nprogress": "^0.2.0",
-    "pg": "^7.18.2",
+    "pg": "^8.5.1",
     "puppeteer-core": "^2.1.1",
     "pusher": "^3.0.0",
     "pusher-js": "^5.1.1",
     "react": "^16.13.0",
     "react-datepicker": "^2.14.1",
     "react-dom": "^16.13.0",
-    "react-map-gl": "^5.0.12",
+    "react-map-gl": "5.3",
     "react-redux": "^7.1.3",
     "react-select": "^3.0.8",
     "redux": "^4.0.5",
