--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "react": "^16.13.0",
     "react-datepicker": "^2.14.1",
     "react-dom": "^16.13.0",
-    "react-map-gl": "5.3",
+    "react-map-gl": "^5.3.9",
     "react-redux": "^7.1.3",
     "react-select": "^3.0.8",
     "redux": "^4.0.5",
@@ -84,7 +84,7 @@
     "@types/pusher-js": "^4.2.2",
     "@types/react": "^16.9.13",
     "@types/react-dom": "^16.9.4",
-    "@types/react-map-gl": "^5.1.1",
+    "@types/react-map-gl": "^5.2.9",
     "@types/react-redux": "^7.1.5",
     "@types/react-select": "^3.0.10",
     "@types/resize-observer-browser": "^0.1.3",
