--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "js-levenshtein": "^1.1.6",
     "jsonwebtoken": "^8.5.1",
     "jwt-simple": "^0.5.6",
+    "leaflet": "^1.7.1",
     "lodash": "^4.17.15",
     "logrocket": "^1.0.7",
     "mapbox-gl": "^1.5.0",
@@ -56,6 +57,7 @@
     "react": "^16.13.0",
     "react-datepicker": "^2.14.1",
     "react-dom": "^16.13.0",
+    "react-leaflet": "^3.1.0",
     "react-map-gl": "^5.3.9",
     "react-redux": "^7.1.3",
     "react-select": "^3.0.8",
@@ -78,6 +80,7 @@
     "@types/date-fns": "^2.6.0",
     "@types/jest": "^24.0.23",
     "@types/js-cookie": "^2.2.5",
+    "@types/leaflet": "^1.7.0",
     "@types/mapbox__mapbox-sdk": "^0.6.2",
     "@types/node": "^12.12.14",
     "@types/pg": "^7.14.1",
