--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "@types/jest": "^24.0.23",
     "@types/js-cookie": "^2.2.5",
     "@types/leaflet": "^1.7.0",
+    "@types/lodash": "^4.14.168",
     "@types/mapbox__mapbox-sdk": "^0.6.2",
     "@types/node": "^12.12.14",
     "@types/pg": "^7.14.1",
@@ -92,6 +93,7 @@
     "@types/resize-observer-browser": "^0.1.3",
     "@types/styled-components": "^5.1.0",
     "@types/webpack-env": "^1.15.0",
+    "@types/yup": "^0.29.11",
     "@typescript-eslint/eslint-plugin": "^2.27.0",
     "@typescript-eslint/parser": "^2.27.0",
     "babel-jest": "^25.5.1",
