--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "@types/lodash": "^4.14.168",
     "@types/mapbox__mapbox-sdk": "^0.6.2",
     "@types/node": "^12.12.14",
+    "@types/nprogress": "^0.2.0",
     "@types/pg": "^7.14.1",
     "@types/pusher-js": "^4.2.2",
     "@types/react": "^16.9.13",
