--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "babel-jest": "^25.5.1",
     "babel-plugin-inline-react-svg": "^1.1.1",
     "babel-plugin-styled-components": "^1.10.6",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
     "jest": "^25.5.2",
     "jest-styled-components": "^7.0.2",
     "msw": "^0.19.1",
